Add display order to licence status